Background Stretch Fix
The background images won't stretch/get compressed anymore when resizing the window.

--- a/Website/css/styles-definition.css
+++ b/Website/css/styles-definition.css
@@ -1,10 +1,11 @@
 body {
   overflow-y: scroll;
+  overflow-x: hidden;
   height: 300vh;
 }
 
 #backgroundImage1 {
-  width: 99.12vw;
+  width: 1920px;
   height: 100vh;
   position:absolute;
   float: left;
@@ -13,7 +14,7 @@ body {
 
 #backgroundImage2 {
   top: 100vh;
-  width: 99.12vw;
+  width: 1920px;
   height: 100vh;
   margin-left: -4px;
   position:absolute;
@@ -23,7 +24,7 @@ body {
 
 #backgroundImage3 {
   top: 200vh;
-  width: 99.12vw;
+  width: 1920px;
   height: 100vh;
   margin-left: -9px;
   position:absolute;
